# DPO-Safety-LLM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
output/: compare_results.json  evaluation_results.json
scripts/: compare_safety.py  evaluate_safety.py  run_eval.sh  run_train.sh
src/: data_loader.py  trainer.py  visualizer.py
tests/: test_safety.py
